# chickenstats-xg

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  experiments.py  pyproject.toml
.github/workflows/: bump_version.yml  lint.yml
api/: docker-compose.yml
api/database/config/: postgresql.conf
api/database/init/: 01-init.sh
chickenstats_xg/: nuke_experiment.py
chickenstats_xg/utilities/: __init__.py  charts.py  download_data.py  nuke_experiment.py  style.py  upload_data.py
chickenstats_xg/v0/: process_data.py
chickenstats_xg/v1/: DECISIONS.md  MODEL.md  config.py  experiments.py  log_model.py  xg_utils.py
chickenstats_xg/v1/base_xg/: diagnose.py  diagnostics.md  finalize.py  process_data.py  run_pipeline.py  score.py
chickenstats_xg/v1/context_xg/: diagnose.py  diagnostics.md  finalize.py  process_data.py  run_pipeline.py  score.py
chickenstats_xg/v1/data/base_xg/scored/: empty_against.parquet  empty_for.parquet  even_strength.parquet  powerplay.parquet  shorthanded.parquet
chickenstats_xg/v1/data/context_xg/scored/: empty_against.parquet  empty_for.parquet  even_strength.parquet  powerplay.parquet  shorthanded.parquet
chickenstats_xg/v1/data/rapm/: rapm_by_season.parquet  rapm_coefficients.parquet
chickenstats_xg/v1/data/rapm/stints/: stints_2010_p.parquet  stints_2010_r.parquet  stints_2011_p.parquet  stints_2011_r.parquet  stints_2012_p.parquet  stints_2012_r.parquet  stints_2013_p.parquet  stints_2013_r.parquet  stints_2014_p.parquet  stints_2014_r.parquet  stints_2015_p.parquet  stints_2015_r.parquet  stints_2016_p.parquet  stints_2016_r.parquet  stints_2017_p.parquet  stints_2017_r.parquet  stints_2018_p.parquet  stints_2018_r.parquet  stints_2019_p.parquet  stints_2019_r.parquet  stints_2020_p.parquet  stints_2020_r.parquet  stints_2021_p.parquet  stints_2021_r.parquet  stints_2022_p.parquet  stints_2022_r.parquet  stints_2023_p.parquet  stints_2023_r.parquet  stints_2024_p.parquet  stints_2024_r.parquet
chickenstats_xg/v1/models/base_xg/empty_against/: calibrator.joblib  meta.json  model.ubj  oof.parquet  params.json
chickenstats_xg/v1/models/base_xg/empty_for/: calibrator.joblib  meta.json  model.ubj  oof.parquet  params.json
chickenstats_xg/v1/models/base_xg/even_strength/: calibrator.joblib  meta.json  model.ubj  oof.parquet  params.json
chickenstats_xg/v1/models/base_xg/powerplay/: calibrator.joblib  meta.json  model.ubj  oof.parquet  params.json
chickenstats_xg/v1/models/base_xg/shorthanded/: calibrator.joblib  meta.json  model.ubj  oof.parquet  params.json
chickenstats_xg/v1/planning/: DECISIONS.md  DIAGNOSTICS.md  MODEL.md
chickenstats_xg/v1/pred_goal/: compute_rolling_stats.py  diagnose.py  diagnostics.md  finalize.py  process_data.py  score.py
chickenstats_xg/v1/rapm/: diagnose.py  prep_pbp.py  process_stints.py  regressions.py
chickenstats_xg/v1/results/blog_posts/: part_1.md  part_2.md  part_3.md  part_4.md  part_5.md  part_6.md  part_7.md
chickenstats_xg/v1/utils/: __init__.py  artifacts.py  calibration.py  data_splitting.py  diagnose_utils.py  finalize_utils.py  log_model.py  rapm.py  scoring.py  shot_features.py  transforms.py
data/: process_pbp.py  scrape_pbp.py
mlflow/: docker-compose.yml
mlflow/caddy/: Caddyfile
mlflow/database/config/: pga_hba.conf
mlflow/database/init/: 01-init.sh
mlflow/ddclient/: ddclient.conf
mlflow/tracking/: Dockerfile
raw_data/: scrape_raw_data.py
(+50 files in other folders)
