[project]
name = "chickenstats-xg"
version = "0.1.0"
description = "Library for chickenstats xG model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.90",
    "chickenstats>=1.7.9.10",
    "cronitor>=4.7.1",
    "matplotlib>=3.10.0",
    "mlflow>=2.19.0",
    "numpy<2.1",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "scikit-learn<1.6.0",
    "seaborn>=0.13.2",
    "setuptools>=75.6.0",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
    "yellowbrick>=1.5",
]
