[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chickenstats-xg"
version = "0.1.0"
description = "Cascade xG model training pipeline for chickenstats"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.6",
    "chickenstats>=1.7.9",
    "joblib>=1.4.0",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "matplotlib>=3.9.0",
    "mlflow>=3.0.0",
    "numpy>=2.1.0",
    "optuna>=4.0.0",
    "pandas>=2.2.0",
    "polars>=1.22.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "shap>=0.46.0",
    "xgboost>=2.1.4",
]

[project.scripts]
# Experiments
xg-experiments    = "chickenstats_xg.v1.experiments:main"
# finalize
finalize-base-xg    = "chickenstats_xg.v1.base_xg.finalize:main"
finalize-context-xg = "chickenstats_xg.v1.context_xg.finalize:main"
finalize-pred-goal    = "chickenstats_xg.v1.pred_goal.finalize:main"
# score
score-base-xg       = "chickenstats_xg.v1.base_xg.score:main"
score-context-xg    = "chickenstats_xg.v1.context_xg.score:main"
score-pred-goal       = "chickenstats_xg.v1.pred_goal.score:main"
# process data
process-base-xg     = "chickenstats_xg.v1.base_xg.process_data:main"
process-context-xg  = "chickenstats_xg.v1.context_xg.process_data:main"
process-pred-goal     = "chickenstats_xg.v1.pred_goal.process_data:main"
# pipeline orchestration
pipeline-base-xg    = "chickenstats_xg.v1.base_xg.run_pipeline:main"
pipeline-context-xg = "chickenstats_xg.v1.context_xg.run_pipeline:main"
# diagnostics
diagnose-base-xg    = "chickenstats_xg.v1.base_xg.diagnose:main"
diagnose-context-xg = "chickenstats_xg.v1.context_xg.diagnose:main"
diagnose-pred-goal = "chickenstats_xg.v1.pred_goal.diagnose:main"
diagnose-rapm    = "chickenstats_xg.v1.rapm.diagnose:main"
# rapm
prep-pbp-rapm         = "chickenstats_xg.v1.rapm.prep_pbp:main"
process-rapm-stints   = "chickenstats_xg.v1.rapm.process_stints:main"
run-rapm         = "chickenstats_xg.v1.rapm.regressions:main"
# mlflow
log-model        = "chickenstats_xg.v1.utils.log_model:main"
# utilities
nuke-experiment  = "chickenstats_xg.utilities.nuke_experiment:main"
upload-data      = "chickenstats_xg.utilities.upload_data:main"
download-data    = "chickenstats_xg.utilities.download_data:main"

[tool.uv]
link-mode = "copy"

[tool.uv.sources]
chickenstats = { git = "https://github.com/chickenandstats/chickenstats.git", tag = "v1.7.9.29" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B006", "SIM102", "SIM117", "UP007"]

[tool.ruff.lint.per-file-ignores]
"experiments.py" = ["B023"]

[tool.ty.environment]
python-version = "3.13"
